--- a/src/Blog.App/Shared/MainLayout.razor
+++ b/src/Blog.App/Shared/MainLayout.razor
@@ -1,10 +1,6 @@
 ﻿@inherits LayoutComponentBase
 <MApp Light>
-    <header class="b-index-header">
-        <MCard Elevation=0 MaxHeight=60 Class="b-index-header-container">
-            <span>This is Text</span>
-        </MCard>
-    </header>
+    <NavMenu/>
 
      <MMain Class="fill-lighten-1" Style="padding-top:60px">
         <div class="pa-6 max-width">
