--- a/src/Blog.App/Pages/Index.razor
+++ b/src/Blog.App/Pages/Index.razor
@@ -5,5 +5,20 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-<br/>
- <MButton MinWidth=80 Height=40 Color="primary" Class="rounded-pill"> Save Changes! </MButton>
+<br />
+<MButton MinWidth=80 Height=40 Color="primary" Class="rounded-pill"> Save Changes! </MButton>
+<span class="b-index-title">这是文本</span>
+
+<span class="b-index-test-css">这是Test文本</span>
+<br />
+<div class="b-index-test-css" style="height: 300px">这是Test文本</div>
+<br />
+<div class="b-index-test-css" style="height: 300px">这是Test文本</div>
+<br />
+<div class="b-index-test-css" style="height: 300px">这是Test文本</div>
+<br />
+<div class="b-index-test-css" style="height: 300px">这是Test文本</div>
+<br />
+<div class="b-index-test-css" style="height: 300px">这是Test文本</div>
+<br />
+<div class="b-index-test-css" style="height: 300px">这是Test文本</div>
