--- a/src/Blog.App/Styles/Pages/base.scss
+++ b/src/Blog.App/Styles/Pages/base.scss
@@ -1,20 +1,4 @@
-﻿html {
-    font-size: 16px;
-}
-
-.b-index-header {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-}
-
-.b-index-header-container {
-    align-items: center !important;
-}
-
-.m-btn {
-    text-transform: none !important;
-}
-
+﻿
 /*scrollbar*/
 ::-webkit-scrollbar-track {
     border-radius: 15px;
