--- a/src/Blog.App/Styles/Shared/nav-menu.scss
+++ b/src/Blog.App/Styles/Shared/nav-menu.scss
@@ -22,6 +22,7 @@
         font-size: 14px;
         font-weight: 400;
         color: #666;
+        bottom: 0;
     }
 
     &-logo {
@@ -33,8 +34,9 @@
         }
     }
 
-    &-selected{
-        margin-left: 30px !important;
+    &-items{
+        display: flex;
+        line-height: 1.5;
     }
 
 }
