--- a/src/Blog.App/Styles/Pages/base.scss
+++ b/src/Blog.App/Styles/Pages/base.scss
@@ -1,4 +1,9 @@
-﻿.m-btn {
+﻿.container {
+    width: 61.5rem; // 2rem container gutters
+    max-width: 100%;
+}
+
+.m-btn {
     text-transform: none !important;
 }
 
