--- a/src/Blog.App/Styles/Base/blog-styles.scss
+++ b/src/Blog.App/Styles/Base/blog-styles.scss
@@ -1,6 +1,10 @@
 ﻿// Helpers
 @import "../Helpers/variables";
 
+// Page
 @import "../Pages/base";
+@import "../Pages/post";
+
+// Shared
 @import "../Shared/nav-menu";
 @import "../Shared/footer";
