--- a/src/Blog.App/Styles/Shared/nav-menu.scss
+++ b/src/Blog.App/Styles/Shared/nav-menu.scss
@@ -38,6 +38,10 @@
         display: flex;
         line-height: 1.5;
     }
+
+    .text-subtitle {
+        background-color: $primary;
+    }
 }
 
 @media (max-width: 767px) {
