--- a/src/Blog.App/Shared/NavMenu.razor
+++ b/src/Blog.App/Shared/NavMenu.razor
@@ -23,12 +23,12 @@
                 }
                 <MRow Dense>
                     <MCol Align="AlignTypes.Center">
-                        <MButton Icon Color="black">
+                        <MButton Icon Color="black" Href="https://github.com/Memoyu" Target="_blank">
                             <MIcon>mdi-github</MIcon>
                         </MButton>
                     </MCol>
                     <MCol>
-                        <MButton Icon Color="indigo">
+                        <MButton Icon Color="green">
                             <MIcon>mdi-wechat</MIcon>
                         </MButton>
                     </MCol>
