--- a/src/Blog.App/Styles/Helpers/_variables.scss
+++ b/src/Blog.App/Styles/Helpers/_variables.scss
@@ -17,3 +17,7 @@ $h4-font-size: $font-size-base * 1.125;
 $h5-font-size: $font-size-base * 1;
 $h6-font-size: $font-size-base;
 
+// radius
+$radius: 0.125rem;
+$radius-var: 0.5rem;
+
