fix：nav and footer

--- a/src/Blog.App/Shared/Footer.razor
+++ b/src/Blog.App/Shared/Footer.razor
@@ -3,12 +3,12 @@
 	<MFooter Light Padless>
 		<MCard Flat Tile Light Class="flex">
 			<MCardText Class="py-0 text-center">
-				Power By .NET6 & Blazor
+				Power By <a class="b-footer-link" target="_blank" href="https://docs.microsoft.com/zh-cn/dotnet/core/introduction">.NET6</a> & <a class="b-footer-link" target="_blank" href="https://docs.microsoft.com/zh-cn/aspnet/core/blazor/?view=aspnetcore-6.0">Blazor</a>
 			</MCardText>
 
 			<MCardText Class="py-0 text-center">
 				&copy; @DateTime.Now.Year - <strong>Memoyu</strong>
-				- <a class="b-footer-other" target="_blank" href="https://beian.miit.gov.cn/">桂ICP备20005450号</a>
+				- <a class="b-footer-link" target="_blank" href="https://beian.miit.gov.cn/">桂ICP备20005450号</a>
 			</MCardText>
 		</MCard>
 	</MFooter>
