--- a/src/Blog.App/Styles/Pages/index.scss
+++ b/src/Blog.App/Styles/Pages/index.scss
@@ -43,7 +43,7 @@
         }
 
         .motto-text {
-            font-size: 1em;
+            font-size: 14px;
             font-weight: bold;
             color: #666;
         }
