--- a/src/Blog.App/Styles/Pages/post.scss
+++ b/src/Blog.App/Styles/Pages/post.scss
@@ -11,6 +11,7 @@
         display: flex;
 
         .post-info-icon {
+            font-size: 17px;
             height: 20px !important;
             width: 20px !important;
             min-width: 20px !important;
