--- a/src/Blog.App/Styles/Base/blog-styles.scss
+++ b/src/Blog.App/Styles/Base/blog-styles.scss
@@ -4,7 +4,8 @@
 // Page
 @import "../Pages/base";
 @import "../Pages/index";
-@import "../Pages/post";
+@import "../Pages/Posts/post";
+@import "../Pages/Posts/detail";
 
 // Shared
 @import "../Shared/nav-menu";
