--- a/src/Blog.App/Styles/Helpers/_variables.scss
+++ b/src/Blog.App/Styles/Helpers/_variables.scss
@@ -1,5 +1,4 @@
 ﻿// Colors
-
 $primary: #622aff;
 $secondary: #8b949e;
 $gold: #ff9f2e;
@@ -20,4 +19,7 @@ $h6-font-size: $font-size-base;
 // radius
 $radius: 0.125rem;
 $radius-var: 0.5rem;
+
+// post
+$post-width:43.75rem
 
