--- a/src/Blog.App/Styles/Pages/base.scss
+++ b/src/Blog.App/Styles/Pages/base.scss
@@ -7,6 +7,10 @@
     text-transform: none !important;
 }
 
+.hover-pointer {
+    cursor: pointer;
+}
+
 /*scrollbar*/
 ::-webkit-scrollbar-track {
     border-radius: 15px;
