fix：index top invalid

--- a/src/Blog.App/Styles/Pages/index.scss
+++ b/src/Blog.App/Styles/Pages/index.scss
@@ -1,7 +1,8 @@
 ﻿.b-introduction {
     text-align: center;
     width: 100%;
-    top: 40%;
+    position: fixed;
+    top: 30%;
 
     &-avatar {
         padding: 10px;
